crates/toml/tests/snapshots/invalid/table/bare-invalid-character-01.stderr
TOML parse error at line 1, column 2
  |
1 | [!]
  |  ^
invalid unquoted key, expected letters, numbers, `-`, `_`
